# 3candles

./: .env  3candles.py  README.TXT  candles.py  candles_hour.ipynb  candles_minute.ipynb  config.yaml  getdata.py  main.py  pyproject.toml
backtesting/: candles_hour.py  candles_minute.py  candles_optimization.py
configs/: config.yaml  config1.yaml  dataconfig.yaml
data/: OANDA:EURUSD_hour.CSV  OANDA:EURUSD_hour_stats.CSV  OANDA:EURUSD_hour_trades.CSV  dataconfig.yaml  getdata.py
getdata/: getdata.py
src/: makemetricpng.py  savetopdf.py
