[project]
name = "3candles"
version = "0.1.0"
description = "Coll candles)"
authors = [
    {name = "gvardovski",email = "gvardovski@icloud.com"}
]
readme = "README.TXT"
requires-python = ">=3.13.3"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "vectorbt (>=0.28.1,<0.29.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pyaml (>=25.7.0,<26.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "anywidget (>=0.9.21,<0.10.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
